outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-26_10-32-20/evaluations/problem_eval-6909017609106564446_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores derived from local distance, centrality, and coherence, with additional penalty terms for revisiting nodes and adaptive weighting factors that emphasize global optimization as the path progresses.}
                                                                                                                                                                                                                          ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores derived from local distance, centrality, and coherence, with additional penalty terms for revisiting nodes and adaptive weighting factors that emphasize global optimization as the path progresses.}
                                                                                                                                                                                                                          ^
SyntaxError: unmatched '}'
